style.css
/*
 *
 * Basics
 *
 */

* {
  --textColor: #363636;
  --textColor2: #363636;
  --bodyBgColor: #fff;
  --linkColor: rgb(0, 65, 145);
}

a,
a:visited {
  color: var(--linkColor);
  text-decoration: none;
}

a.anchor {
  position: relative;
  top: -70px;
  visibility: hidden;
}

h1 {
  margin-top: 0;
  margin-bottom: 18px;
  text-align: center;
  font-size: 32px;
  color: var(--textColor2)
}

h1.title {
  font-size: 40px;
}

h2,
h3 {
  margin-top: 25px;
  font-size: 20px;
  color: var(--textColor2);
}

a:hover {
  text-decoration: underline;
}

h3 a,
h3 a:visited {
  color: var(--textColor2);
}

body,
main {
  min-width: 0px;
  margin: 0;
  background-color: var(--bodyBgColor);
  color: var(--textColor);
  font-size: 14.5px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

main {
  margin: 0 auto;
  display: grid;
  padding: 10px;
}

header {
  padding: 10px;
  position: fixed;
  top: 0;
  background-color: var(--bodyBgColor);
}

header h1 {
  margin: 0 10px;
  text-align: left;
}

article {
  margin: 0 5px 5px 5px;
  padding-bottom: 40px;
}

/*
 *
 * Nav
 *
 */
nav {
  margin-top: 20px;
  padding-left: 10px;
}

nav ul {
  padding: 0;
  margin: 0;
  list-style: none;
  position: relative;
}

nav ul li {
  list-style: none;
  font-size: 1.1em;
  padding: 0 10px;
  line-height: 2.5em;
}

nav ul ul li {
  margin-left: 15px;
  font-size: 1em;
  line-height: 2.2em;
}

nav a,
nav a:visited {
  display: block;
  text-decoration: none;
  color: var(--textColor);
}

nav a:hover {
  color: var(--linkColor);
}

/*
 *
 * QR codes
 *
 */

.qrcontainer {
  text-align: center;
}

.qrcontainer .qrimage {
  width: 140px;
  margin-top: 30px;
}

/*
 *
 * Main page member list
 *
 */
.memberList {
  max-width: 620px;
  margin: auto;
  display: grid;
  row-gap: 20px;
  text-align: center;
  grid-template-columns: repeat(auto-fit, 20%);
  justify-content: center;
  justify-items: center;
}

.memberList img.avatar {
  border-radius: 50%;
  box-shadow: #bbb 1px 1px 15px;
}

.memberList a,
.memberList a:hover {
  color: var(--textColor);
}

.memberList a>div {
  height: 30px;
  font-size: 13.5px;
}

/*
 *
 * About pages
 *
 */
.avatarAndBio {
  display: grid;
  grid-template-columns: auto auto;
}

.avatarAndBio .bio {
  padding: 10px 10px 10px 30px;
  text-align: justify;
}

.avatarAndBio img.avatar {
  border-radius: 50%;
  box-shadow: #bbb 1px 1px 15px;
}

.furtherInfo {
  padding: 10px;
  display: grid;
  gap: 15px;
}

@media (min-width: 1020px) {
  .furtherInfo {
    grid-template-columns: 1fr 1fr;
  }
}

.furtherInfo h2 {
  margin-bottom: 10px;
}

.furtherInfo ul li {
  margin-left: -15px;
}

/*
 *
 * Year headings
 *
 */
.yearHeading {
  text-align: center;
  border-bottom: 2px solid #eee;
}

/*
 *
 * Publications on other pages
 *
 */
.paper {
  margin-bottom: 0;
  display: grid;
  border-radius: 10px;
  padding: 10px;
  grid-template-columns: 132px auto;
}

.paper h3 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 15px;
  font-weight: 600;
}

.paper img.publicationImage {
  grid-area: span 1 / span 2;
  margin: 4px 0 15px 0;
  width: 100%;
  border-radius: 4px;
  box-shadow: #ccc 0 0 12px;
}

.paper img.publicationImage {
  grid-area: span 1 / span 1;
  width: 128px;
}

.paper .metaData {
  padding-left: 15px;
  font-size: 0.95em;
  color: var(--textColor2);
}

.paper .metaData.noImage {
  grid-area: span 1 / span 2;
  margin-left: 132px;
}

.paper .metaData div {
  margin-bottom: 8px;
}

.paper .metaData .links a {
  padding-right: 8px;
}

.paper .metaData div.authors a {
  color: inherit;
}

.paper .metaData div.authors b {
  font-weight: 600;
}

/*
 *
 * Publication pages
 *
 */
.pubPageContent {
  text-align: center;
}

.pubPageContent div {
  margin-top: 10px;
}

.pubPageContent img.teaser {
  max-width: 75%;
  max-height: 400px;
  margin: auto;
  border-radius: 3px;
}

.pubPageContent .abstract {
  text-align: justify;
}

.pubPageContent textarea {
  width: 90%;
  min-height: 120px;
  max-height: 300px;
  border: 10px solid #f8f8f8;
  border-radius: 10px;
  background: #fcfcfc;
  resize: vertical;
}

.pubPageContent div.materials a {
  padding: 0 3px;
}

.pubPageContent div.authors a {
  color: inherit;
}

.pubPageContent b {
  font-weight: 700;
}

/*
 *
 * Link icons
 *
 */

/* base formatting and icon for links that open in a new tab, excluding images */
a[target="_blank"]:not(:has(img))::after {
  content: "";
  display: inline-block;
  width: 0.85em;
  height: 0.85em;
  margin-left: 6px;
  margin-top: .2em;
  background-repeat: no-repeat;
  background-size: contain;
  /* new-tab icon*/
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23000000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6'%3E%3C/path%3E%3Cpolyline points='15 3 21 3 21 9'%3E%3C/polyline%3E%3Cline x1='10' y1='14' x2='21' y2='3'%3E%3C/line%3E%3C/svg%3E");
}

/* internal PDFs get PDF icon */
a[href*=".pdf" i]:not([href^="http"])::after, 
a[href*=".pdf" i][href*="visvar.github.io"]::after {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23000000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z'%3E%3C/path%3E%3Cpolyline points='14 2 14 8 20 8'%3E%3C/polyline%3E%3Cline x1='16' y1='13' x2='8' y2='13'%3E%3C/line%3E%3Cline x1='16' y1='17' x2='8' y2='17'%3E%3C/line%3E%3Cline x1='10' y1='9' x2='8' y2='9'%3E%3C/line%3E%3C/svg%3E");
}

/* internal ZIPs get ZIP icon */
a[href*=".zip" i]:not([href^="http"])::after, 
a[href*=".zip" i][href*="visvar.github.io"]::after {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23000000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4'%3E%3C/path%3E%3Cpolyline points='7 10 12 15 17 10'%3E%3C/polyline%3E%3Cline x1='12' y1='15' x2='12' y2='3'%3E%3C/line%3E%3C/svg%3E");
}

/* internal MP4s get MP4 icon */
a[href*=".mp4" i]:not([href^="http"])::after, 
a[href*=".mp4" i][href*="visvar.github.io"]::after {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23000000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='2' y='2' width='20' height='20' rx='2.18' ry='2.18'%3E%3C/rect%3E%3Cline x1='7' y1='2' x2='7' y2='22'%3E%3C/line%3E%3Cline x1='17' y1='2' x2='17' y2='22'%3E%3C/line%3E%3Cline x1='2' y1='12' x2='22' y2='12'%3E%3C/line%3E%3Cline x1='2' y1='7' x2='7' y2='7'%3E%3C/line%3E%3Cline x1='2' y1='17' x2='7' y2='17'%3E%3C/line%3E%3Cline x1='17' y1='17' x2='22' y2='17'%3E%3C/line%3E%3Cline x1='17' y1='7' x2='22' y2='7'%3E%3C/line%3E%3C/svg%3E");}

/*
 *
 * Accessibility
 *
 */

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  clip-path: inset(50%);
  white-space: nowrap;
  border: 0;
}

/*
 *
 * Responsiveness
 *
 */

/* phone layout */
@media (min-width: 0px) {

  main {
    grid-template-columns: auto;
    max-width: 960px;
    margin-top: 65px;
  }

  header {
    position: fixed;
    padding-top: 0;
    width: 100%;
  }

  header .logo {
    width: 50px;
  }

  header>div,
  nav ul li {
    display: inline-block;
  }

  .memberNav {
    display: none;
  }

  article {
    grid-template-columns: auto;
  }

  .memberList img.avatar {
    width: 64px;
    height: 64px;
  }

  img.avatar {
    width: 128px;
    height: 128px;
  }

  /* Member list with pictures */
  .memberList {
    max-width: 100%;
    grid-template-columns: repeat(auto-fit, 30%);
  }
}

/* tablet layout */
@media (min-width: 720px) {

  main {
    grid-template-columns: 250px auto;
    margin-top: 0;
  }

  header {
    position: fixed;
    padding-top: 20px;
    width: 220px;
  }

  header .logo {
    padding: 0 20px;
    width: 180px;
  }

  header>div,
  nav ul li {
    display: block;
  }

  article {
    grid-template-columns: 1fr 1fr;
  }

  a.anchor {
    top: -5px;
  }

  .memberList img.avatar {
    width: 96px;
    height: 96px;
  }

  img.avatar {
    width: 192px;
    height: 192px;
  }

  /* Member list with pictures */
  .memberList {
    max-width: 100%;
    grid-template-columns: repeat(auto-fit, 25%);
  }
}

/* desktop layout */
@media (min-width: 1020px) {

  main {
    grid-template-columns: 250px auto;
    margin-top: 0;
  }

  header {
    position: fixed;
    padding-top: 20px;
    width: 220px;
  }

  header>div,
  nav ul li {
    display: block;
  }

  .memberNav {
    display: block;
  }

  article {
    grid-template-columns: 1fr 1fr;
  }

  a.anchor {
    top: -5px;
  }

  /* Main page about infos */
  .aboutusFurtherInfo {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 32px;
    row-gap: 2px;
  }

  img.avatar {
    width: 256px;
    height: 256px;
  }

  /* Member list with pictures */
  .memberList {
    max-width: 100%;
    grid-template-columns: repeat(auto-fit, 20%);
  }
}

